--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -59,6 +59,12 @@ jobs:
                   persist-credentials: false
                   fetch-depth: 0
 
+            - name: Install just
+              run: |
+                  curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s --  --to ~/bin
+                  which just
+                  just --version
+
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v5
               with:
