--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -61,7 +61,7 @@ jobs:
 
             - name: Install just
               run: |
-                  curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s --  --to ~/bin
+                  curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
                   which just
                   just --version
 
