--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -5,7 +5,6 @@ env:
     # https://github.com/pytest-dev/pytest/issues/7443
     # https://github.com/actions/runner/issues/241
     PY_COLORS: 1
-    POETRY_VERSION: "2.0.1"
 
 on:
     pull_request:
@@ -66,7 +65,9 @@ jobs:
                   just --version
 
             - name: Install uv
-              uses: astral-sh/setup-uv@v4
+              uses: astral-sh/setup-uv@v5
+              with:
+                  version: "latest"
 
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v5
